--- a/people.html
+++ b/people.html
@@ -13,7 +13,7 @@
 
 <title>Bradley J. Cosentino</title>
 
-<script src="site_libs/header-attrs-2.27/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -30,8 +30,8 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.5.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.5.2/css/v4-shims.min.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
@@ -491,19 +491,16 @@ $('.title').remove()
 <div class="row">
 <div class="row">
 <div class="col-lg-7">
-<p><strong>Dr. Jesse Borden, Postdoctoral associate</strong></p>
-<p>Dr. Borden is investigating spatial variation in coat color in gray
-squirrel as part of our NSF project on urban evolution.</p>
-<p><strong>Sam Dennenberg, Research technician</strong></p>
-<p>Sam is leading field work on an experiment to test for differential
-attack rates by predators on color morphs of eastern gray squirrels in
-urban and rural environments.</p>
-<p><strong>Undergraduate students: Calvin Lincoln, Chidalu Nwokolo, and
-James Nelson</strong></p>
-<p>Calvin, Chidalu, and James are using behavioral trials in the field
-to compare antipredator behavior bewteen color morphs of eastern gray
-squirrels in different environmental contexts of the urban
-landscape.</p>
+<p><strong>Dr. Christy Wails, Postdoctoral associate</strong></p>
+<p>Dr. Wails is using time series analysis to investigate changes in
+island vegetation structure in response to invasive mammal removal.</p>
+<p><strong>Jacki Young, Research technician</strong></p>
+<p>Jacki is assisting with projects to compare thermal performance and
+heavy metal loads between color morphs of eastern gray squirrels.</p>
+<p><strong>Undergraduate students: Jessica Sprole, Jasmine Ho, Ryan
+Agans</strong></p>
+<p>The summer research group is comparing thermal performance between
+color morphs of eastern gray squirrels.</p>
 </div>
 <div class="col-lg-5">
 <p><img src="images/IMG_2550@2x.jpg" width="100%" style="display: block; margin: auto;" /></p>
@@ -511,6 +508,19 @@ landscape.</p>
 </div>
 <div id="former-lab-members" class="section level3">
 <h3><strong>Former lab members</strong></h3>
+<p><strong>Dr. Jesse Borden, Postdoctoral associate</strong></p>
+<p>Dr. Borden investigated spatial variation in coat color in gray
+squirrel as part of our NSF project on urban evolution.</p>
+<p><strong>Sam Dennenberg, Research technician</strong></p>
+<p>Sam led field work on an experiment to test for differential attack
+rates by predators on color morphs of eastern gray squirrels in urban
+and rural environments.</p>
+<p><strong>Calvin Lincoln, Chidalu Nwokolo, James Nelson, Aidan
+Staunton, Magnus Von Krusenstiern (undergraduate students)</strong></p>
+<p>Summer research teams in 2023 and 2024 that used behavioral trials in
+the field to compare antipredator behavior bewteen color morphs of
+eastern gray squirrels in different environmental contexts of the urban
+landscape.</p>
 <p><strong>Ruben Navarro, Devon Adams, and Hannah Huston (undergraduate
 students)</strong></p>
 <p>Ruben, Devon, and Hannah compared ectoparasite loads between color
@@ -671,7 +681,7 @@ on an MS in Wildlife Ecology at West Virginia University.</p>
 <br>
 <br>
 <br>
-<p>Last modified July 2024</p>
+<p>Last modified June 2025</p>
 </center>
 </div>
 
