--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 
 <title>Bradley J. Cosentino</title>
 
-<script src="site_libs/header-attrs-2.27/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -30,8 +30,8 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.5.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.5.2/css/v4-shims.min.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
@@ -486,6 +486,18 @@ $('.title').remove()
 <h2><strong>Publications</strong></h2>
 <hr>
 <div id="section" class="section level3">
+<h3>2025</h3>
+<p>Parlin, A.F., <strong>B.J. Cosentino</strong>, R.M. Lehtinen, J.E.
+McDonald, E.C.C. Sinclair, and J.P. Gibbs. Road mortality contributes to
+the evolution of an urban-rural cline in squirrel coat color.
+Evolutionary Applications 18(5), e70109. <a
+href="https://onlinelibrary.wiley.com/doi/10.1111/eva.70109">Link</a></p>
+<p>Proctor, J., A. Bryan, <strong>B.J. Cosentino</strong>, and J.P.
+Gibbs. Crypsis in a polymorphic mammal along an urbanization gradient.
+Urban Ecosystems 28:94. <a
+href="Crypsis%20in%20a%20polymorphic%20mammal%20along%20an%20urbanization%20gradient%20rdcu.be">Link</a></p>
+</div>
+<div id="section-1" class="section level3">
 <h3>2024</h3>
 <p>Alexander, N., A. de Flamingh, <strong>B.J. Cosentino</strong>, and
 R.L. Schooley. Phylogenetic assessment within a species complex of a
@@ -501,6 +513,12 @@ href="https://link.springer.com/article/10.1007/s10980-024-01878-0">Link</a></p>
 structure of a widespread, urban-dwelling mammal. Molecular Ecology
 33:e17230. <a
 href="documents/fusco_etal_2024_MolecularEcology.pdf">PDF</a></p>
+<p>Honzák, M., D. Will, G. Roberts, H. McKenzie-McHarg, A. Thieme, J.O.
+Sexton, M. Feng, <strong>B.J. Cosentino</strong>, J. Wilson. Toward the
+quantification of climate co-benefits of invasive mammal eradication on
+islands: A scalable framework for restoring monitoring. Environmental
+Research Letters 19:114018. <a
+href="https://iopscience.iop.org/article/10.1088/1748-9326/ad77b7">Link</a></p>
 <p>Tennant, J.H., <strong>B.J. Cosentino</strong>, L.B. Cleckner, K.M.
 Brubaker, and N.R. Razavi. Methylmercury concentrations more strongly
 associated with trait variation than food web position in plethodontid
@@ -511,14 +529,14 @@ Linking animal personality and habitat restoration for a keystone
 species. Animal Behaviour 212:13-30. <a
 href="https://www.sciencedirect.com/science/article/pii/S0003347224000836">Link</a></p>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-2" class="section level3">
 <h3>2023</h3>
 <p><strong>Cosentino, B.J.,</strong> J.P. Vanek, and J.P. Gibbs. Rural
 selection drives the evolution of an urban-rural cline in coat color in
 gray squirrels. Ecology and Evolution 13:e10544 <a
 href="https://onlinelibrary.wiley.com/doi/10.1002/ece3.10544">Link</a></p>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2022</h3>
 <p><strong>Cosentino, B.J.</strong> and J.P. Gibbs. Parallel evolution
 of urban-rural clines in melanism in a widespread mammal. Scientific
@@ -530,7 +548,7 @@ Schooley.Testing the niche reduction hypothesis for a fossorial rodent
 and Evolution 12:e9559. <a
 href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.9559">Link</a></p>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2021</h3>
 <p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et
 al. Correlates of bird collisions with buildings across three North
@@ -541,14 +559,14 @@ and biomass in post-agricultural forests: Lessons learned with new
 spatial tools. Applied Vegetation Science 24:e12552. <a
 href="documents/brubaker_appvegsci_2021.pdf">PDF</a></p>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2020</h3>
 <p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>.
 Shrub encroachment creates a dynamic landscape of fear for desert
 lagomorphs via multiple pathways. Ecosphere 11(9):e03240. <a
 href="documents/wagnon_ecosphere_2020.pdf">PDF</a></p>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2019</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer, H.
 Campos, and L.M. Burkett. 2019. Does habitat disturbance promote
@@ -575,7 +593,7 @@ course implementation: examining downstream impacts on teaching
 practices and student learning at 4-year institutions. BioScience
 69:47-58. <a href="documents/kenyon_bioscience_2019.pdf">PDF</a></p>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2018</h3>
 <p><strong>Cosentino, B.J.</strong> and K.M. Brubaker. 2018. Effects of
 land use legacies and habitat fragmentation on salamander abundance.
@@ -594,7 +612,7 @@ Metapopulation dynamics of wetland species. In: Finlayson, C., et al.,
 editors. The Wetland Book. Springer, Dordrecth. <a
 href="documents/schooley_wetland_2018.pdf">PDF</a></p>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2017</h3>
 <p><strong>Cosentino, B.J.</strong>, J.D. Moore, N.E. Karraker, M.
 Ouellet, and J.P. Gibbs. 2017. Evolutionary response to global change:
@@ -616,14 +634,14 @@ spatial scales and regions in the eastern and central United States.
 Diversity and Distributions 23:158-170. <a
 href="documents/marsh_divdist_2017.pdf">PDF</a></p>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2016</h3>
 <p><strong>Cosentino, B.J.</strong>, and D.C. Droney. 2016. Movement
 behaviour of woodland salamanders is repeatable and varies with forest
 age in a fragmented landscape. Animal Behaviour 121:137-146. <a
 href="documents/cosentino_anbeh_2016.pdf">PDF</a></p>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2015</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer,
 A.J. McCarthy, and K. Sierzega. 2015. Rapid genetic restoration of a
@@ -631,7 +649,7 @@ keystone species exhibiting delayed demographic response. Molecular
 Ecology. 24:6120–6133. <a
 href="documents/cosentino_molecol_2015.pdf">PDF</a></p>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2014</h3>
 <p><strong>Cosentino, B.J.</strong>, D.M. Marsh, K.S. Jones, et
 al. 2014. Citizen science reveals widespread negative effects of roads
@@ -648,7 +666,7 @@ recovery of a keystone species (Dipodomys spectabilis) after landscape
 restoration. Landscape Ecology 29:665–675. <a
 href="documents/cosentino_landecol_2014.pdf">PDF</a></p>
 </div>
-<div id="section-11" class="section level3">
+<div id="section-12" class="section level3">
 <h3>2013</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer,
 and J.M. Coffman. 2013. Response of lizard community structure to desert
@@ -665,7 +683,7 @@ cameras and basking rafts: a pilot study in Illinois, USA. Transactions
 of the Illinois State Academy of Science 106:15–21. <a
 href="documents/bluett_ias_2013.pdf">PDF</a></p>
 </div>
-<div id="section-12" class="section level3">
+<div id="section-13" class="section level3">
 <h3>2012</h3>
 <p><strong>Cosentino, B.J.</strong>, C.A. Phillips, R.L. Schooley, W.H.
 Lowe, and M.R. Douglas. 2012. Linking extinction-colonization dynamics
@@ -681,7 +699,7 @@ Cosentino</strong>. 2012. Decoupling of genetic and phenotypic
 divergence in a headwater landscape. Molecular Ecology 21:2399–2409. <a
 href="documents/lowe_molecol_2012.pdf">PDF</a></p>
 </div>
-<div id="section-13" class="section level3">
+<div id="section-14" class="section level3">
 <h3>2011</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, and C.A. Phillips.
 2011. Spatial connectivity moderates the effect of predatory fish on
@@ -751,7 +769,7 @@ href="documents/cosentino_turtle_2008.pdf">PDF</a></p>
 <br>
 <br>
 <br>
-<p>Last modified July 2024</p>
+<p>Last modified June 2025</p>
 </center>
 </div>
 
