--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@
 
 <title>Bradley J. Cosentino</title>
 
-<script src="site_libs/header-attrs-2.27/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -30,8 +30,8 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.5.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.5.2/css/v4-shims.min.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
@@ -495,6 +495,7 @@ $('.title').remove()
 <li>Biostatistics (BIOL212)</li>
 <li>Evolutionary Genetics (BIOL215)</li>
 <li>Ecology (BIOL225)</li>
+<li>Evolution (BIOL300)</li>
 <li>Wildlife Ecology &amp; Management (BIOL315)</li>
 <li>Conservation Biology (BIOL316)</li>
 <li>Human Nature (BIOL460)</li>
@@ -541,7 +542,7 @@ a description of your interests.</p>
 <br>
 <br>
 <br>
-<p>Last modified July 2024</p>
+<p>Last modified June 2025</p>
 </center>
 </div>
 
